@@ -1591,89 +1591,6 @@ return|return
 name|out
 return|;
 block|}
-comment|/**    * Add fields from the solr document    *     * TODO: /!\ NOTE /!\ This semantics of this function are still in flux.      * Something somewhere needs to be able to fill up a SolrDocument from    * a lucene document - this is one place that may happen.  It may also be    * moved to an independent function    *     * @since solr 1.3    */
-DECL|method|loadStoredFields
-specifier|public
-name|SolrDocument
-name|loadStoredFields
-parameter_list|(
-name|SolrDocument
-name|doc
-parameter_list|,
-name|Document
-name|luceneDoc
-parameter_list|)
-block|{
-for|for
-control|(
-name|IndexableField
-name|field
-range|:
-name|luceneDoc
-control|)
-block|{
-if|if
-condition|(
-name|field
-operator|.
-name|fieldType
-argument_list|()
-operator|.
-name|stored
-argument_list|()
-condition|)
-block|{
-name|SchemaField
-name|sf
-init|=
-name|schema
-operator|.
-name|getField
-argument_list|(
-name|field
-operator|.
-name|name
-argument_list|()
-argument_list|)
-decl_stmt|;
-if|if
-condition|(
-operator|!
-name|schema
-operator|.
-name|isCopyFieldTarget
-argument_list|(
-name|sf
-argument_list|)
-condition|)
-block|{
-name|doc
-operator|.
-name|addField
-argument_list|(
-name|field
-operator|.
-name|name
-argument_list|()
-argument_list|,
-name|sf
-operator|.
-name|getType
-argument_list|()
-operator|.
-name|toObject
-argument_list|(
-name|field
-argument_list|)
-argument_list|)
-expr_stmt|;
-block|}
-block|}
-block|}
-return|return
-name|doc
-return|;
-block|}
 block|}
 end_class
 
