@@ -38,6 +38,20 @@ name|apache
 operator|.
 name|lucene
 operator|.
+name|index
+operator|.
+name|IndexableField
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|lucene
+operator|.
 name|queryparser
 operator|.
 name|classic
@@ -3421,17 +3435,13 @@ parameter_list|)
 throws|throws
 name|IOException
 block|{
-name|DocumentBuilder
-name|db
+name|IndexSchema
+name|schema
 init|=
-operator|new
-name|DocumentBuilder
-argument_list|(
 name|searcher
 operator|.
 name|getSchema
 argument_list|()
-argument_list|)
 decl_stmt|;
 name|SolrDocumentList
 name|list
@@ -3513,23 +3523,85 @@ operator|new
 name|SolrDocument
 argument_list|()
 decl_stmt|;
-name|db
-operator|.
-name|loadStoredFields
-argument_list|(
-name|doc
-argument_list|,
+for|for
+control|(
+name|IndexableField
+name|field
+range|:
 name|luceneDoc
+control|)
+block|{
+if|if
+condition|(
+literal|null
+operator|==
+name|fields
+operator|||
+name|fields
+operator|.
+name|contains
+argument_list|(
+name|field
+operator|.
+name|name
+argument_list|()
+argument_list|)
+condition|)
+block|{
+name|SchemaField
+name|sf
+init|=
+name|schema
+operator|.
+name|getField
+argument_list|(
+name|field
+operator|.
+name|name
+argument_list|()
+argument_list|)
+decl_stmt|;
+name|doc
+operator|.
+name|addField
+argument_list|(
+name|field
+operator|.
+name|name
+argument_list|()
+argument_list|,
+name|sf
+operator|.
+name|getType
+argument_list|()
+operator|.
+name|toObject
+argument_list|(
+name|field
+argument_list|)
 argument_list|)
 expr_stmt|;
-comment|// this may be removed if XMLWriter gets patched to
-comment|// include score from doc iterator in solrdoclist
+block|}
+block|}
 if|if
 condition|(
 name|docs
 operator|.
 name|hasScores
 argument_list|()
+operator|&&
+operator|(
+literal|null
+operator|==
+name|fields
+operator|||
+name|fields
+operator|.
+name|contains
+argument_list|(
+literal|"score"
+argument_list|)
+operator|)
 condition|)
 block|{
 name|doc
@@ -3542,18 +3614,6 @@ name|dit
 operator|.
 name|score
 argument_list|()
-argument_list|)
-expr_stmt|;
-block|}
-else|else
-block|{
-name|doc
-operator|.
-name|addField
-argument_list|(
-literal|"score"
-argument_list|,
-literal|0.0f
 argument_list|)
 expr_stmt|;
 block|}
