@@ -401,7 +401,11 @@ literal|"id"
 argument_list|,
 literal|"3234"
 argument_list|,
-literal|"val_t"
+literal|"val_i"
+argument_list|,
+literal|"1"
+argument_list|,
+literal|"val_dynamic"
 argument_list|,
 literal|"quick red fox"
 argument_list|)
@@ -417,7 +421,11 @@ literal|"id"
 argument_list|,
 literal|"3235"
 argument_list|,
-literal|"val_t"
+literal|"val_i"
+argument_list|,
+literal|"1"
+argument_list|,
+literal|"val_dynamic"
 argument_list|,
 literal|"quick green fox"
 argument_list|)
@@ -433,14 +441,23 @@ literal|"id"
 argument_list|,
 literal|"3236"
 argument_list|,
-literal|"val_t"
+literal|"val_i"
+argument_list|,
+literal|"1"
+argument_list|,
+literal|"val_dynamic"
 argument_list|,
 literal|"quick brown fox"
 argument_list|)
 argument_list|)
 expr_stmt|;
+name|assertU
+argument_list|(
+literal|""
+argument_list|,
 name|commit
 argument_list|()
+argument_list|)
 expr_stmt|;
 name|RefCounted
 argument_list|<
@@ -456,6 +473,8 @@ operator|.
 name|getSearcher
 argument_list|()
 decl_stmt|;
+try|try
+block|{
 name|SolrIndexSearcher
 name|srchr
 init|=
@@ -495,6 +514,13 @@ name|MatchAllDocsQuery
 argument_list|()
 argument_list|)
 expr_stmt|;
+name|cmd
+operator|.
+name|setLen
+argument_list|(
+literal|10
+argument_list|)
+expr_stmt|;
 name|qr
 operator|=
 name|srchr
@@ -514,6 +540,18 @@ operator|.
 name|getDocList
 argument_list|()
 decl_stmt|;
+name|assertEquals
+argument_list|(
+literal|"wrong docs size"
+argument_list|,
+literal|3
+argument_list|,
+name|docs
+operator|.
+name|size
+argument_list|()
+argument_list|)
+expr_stmt|;
 name|Set
 argument_list|<
 name|String
@@ -531,9 +569,24 @@ name|fields
 operator|.
 name|add
 argument_list|(
-literal|"val_t"
+literal|"val_dynamic"
 argument_list|)
 expr_stmt|;
+name|fields
+operator|.
+name|add
+argument_list|(
+literal|"dynamic_val"
+argument_list|)
+expr_stmt|;
+name|fields
+operator|.
+name|add
+argument_list|(
+literal|"range_facet_l"
+argument_list|)
+expr_stmt|;
+comment|// copied from id
 name|SolrDocumentList
 name|list
 init|=
@@ -550,28 +603,16 @@ argument_list|,
 literal|null
 argument_list|)
 decl_stmt|;
-name|assertTrue
+name|assertEquals
 argument_list|(
-literal|"list Size: "
-operator|+
-name|list
-operator|.
-name|size
-argument_list|()
-operator|+
-literal|" is not: "
-operator|+
+literal|"wrong list Size"
+argument_list|,
 name|docs
 operator|.
 name|size
 argument_list|()
 argument_list|,
 name|list
-operator|.
-name|size
-argument_list|()
-operator|==
-name|docs
 operator|.
 name|size
 argument_list|()
@@ -585,22 +626,120 @@ range|:
 name|list
 control|)
 block|{
+name|assertTrue
+argument_list|(
+literal|"unexpected field"
+argument_list|,
+operator|!
+name|document
+operator|.
+name|containsKey
+argument_list|(
+literal|"val_i"
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|assertTrue
+argument_list|(
+literal|"unexpected id field"
+argument_list|,
+operator|!
+name|document
+operator|.
+name|containsKey
+argument_list|(
+literal|"id"
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|assertTrue
+argument_list|(
+literal|"original field"
+argument_list|,
+name|document
+operator|.
+name|containsKey
+argument_list|(
+literal|"val_dynamic"
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|assertTrue
+argument_list|(
+literal|"dyn copy field"
+argument_list|,
+name|document
+operator|.
+name|containsKey
+argument_list|(
+literal|"dynamic_val"
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|assertTrue
+argument_list|(
+literal|"copy field"
+argument_list|,
+name|document
+operator|.
+name|containsKey
+argument_list|(
+literal|"range_facet_l"
+argument_list|)
+argument_list|)
+expr_stmt|;
 name|assertNotNull
 argument_list|(
+literal|"original field null"
+argument_list|,
 name|document
 operator|.
 name|get
 argument_list|(
-literal|"val_t"
+literal|"val_dynamic"
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|assertNotNull
+argument_list|(
+literal|"dyn copy field null"
+argument_list|,
+name|document
+operator|.
+name|get
+argument_list|(
+literal|"dynamic_val"
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|assertNotNull
+argument_list|(
+literal|"copy field null"
+argument_list|,
+name|document
+operator|.
+name|get
+argument_list|(
+literal|"range_facet_l"
 argument_list|)
 argument_list|)
 expr_stmt|;
 block|}
+block|}
+finally|finally
+block|{
+if|if
+condition|(
+literal|null
+operator|!=
+name|holder
+condition|)
 name|holder
 operator|.
 name|decref
 argument_list|()
 expr_stmt|;
+block|}
 block|}
 annotation|@
 name|Test
